<resources>
    <string name="app_name">Navicula</string>
    <string name="app_desc">Jachthaven Harderwijk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Menu categories
    <string name="category_login">Aanmelden</string>
    <string name="category_account">Account</string>
    //Menu items
    <string name="action_home">Home</string>
    <string name="action_login">Inloggen</string>
    <string name="action_register">Registreren</string>
    <string name="action_logout">Uitloggen</string>
    <string name="action_myBoats">Mijn boten</string>
    <string name="action_addBoats">Boot toevoegen</string>
    <string name="action_myBoxes">Mijn boxen</string>
    <string name="action_rentBoxes">Box huren</string>
    <string name="action_reserveCrane">Hijskraan reserveren</string>
    <string name="action_myInfo">Mijn gegevens</string>


    <string name="action_manageUsers">Gebruikers beheren</string>
    <string name="action_manageBoats">Boten beheren</string>
    <string name="action_manageCranes">Hijskranen beheren</string>


    //Login form
    <string name="textView_signIn">Login</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="hint_email">E-mailadres</string>
    <string name="action_logIn">Inloggen</string>
    <string name="action_forgotPassword">Wachtwoord vergeten?</string>
    <string name="action_loggedIn">Welkom, [FIRST_NAME]</string>
    <string name="action_loggedOut">Tot ziens!</string>
    <string name="action_logIn_failed">Er ging wat mis, probeer het opnieuw.</string>


    //Registration form
    <string name="registration_title">Aanmelden duurt maar een paar seconden d.m.v. een aantal van uw basis gegevens achter te laten</string>
    <string name="registration_first_name">Voornaam</string>
    <string name="registration_last_name">Achternaam</string>
    <string name="registration_email">E-mailadres</string>
    <string name="registration_adress">Adres</string>
    <string name="registration_house_number">Huisnummer</string>
    <string name="registration_house_number_addition">Toevoeging</string>
    <string name="registration_phone">Telefoonnummer</string>
    <string name="registration_button_send">Registreren</string>

    //Boat View
    <string name="boat_view_zero_boats">U heeft nog geen boten</string>
    <string name="boat_view_button_add">Boot toevoegen</string>

    //Boat Add
    <string name="boat_add_title">Een boot registreren duurt maar een paar seconden d.m.v. een aantal van uw boot gegevens achter te laten</string>
    <string name="boat_add_boat_name">Naam boot</string>
    <string name="boat_add_boat_brand">Merk boot</string>
    <string name="boat_add_boat_type">Type boot (Bijv. Kajuit)</string>
    <string name="boat_add_boat_color">Kleur boot</string>
    <string-array name="boat_add_boat_color">
        <item>Wit</item>
        <item>Bruin</item>
        <item>Zwart</item>
        <item>Rood</item>
        <item>Blauw</item>
        <item>Groen</item>
        <item>Geel</item>
    </string-array>
    <string name="boat_add_dimensions">Afmetingen</string>
    <string name="boat_add_dimensions_length">Lengte (m)</string>
    <string name="boat_add_dimensions_width">Breedte (m)</string>
    <string name="boat_add_dimensions_heigth">Hoogte (m)</string>
    <string name="boat_add_radiobutton_motorboat">Motorboot</string>
    <string name="boat_add_radiobutton_sailboat">Zeilboot</string>
    <string name="boat_add_radiobutton_otherboat">Overig</string>
    <string name="boat_add_boat_people">Aantal betrokkene mensen</string>
    <string name="boat_add_button_register">Registreer boot</string>
    <string name="boat_add_success">Boot geregistreerd</string>

    //User View
    <string name="user_view_button">Opslaan</string>
    <string name="user_data_success">Gegevens gewijzigd</string>

    //Box Rent
    <string name="rent_this_box">Box huren</string>
    <string name="box_width">Breedte</string>
    <string name="box_length">Lengte</string>
    <string name="box_depth">Diepgang</string>
    <string name="box_price">Prijs</string>
    <string name="box_number">Box nummer</string>

    //Crane Rent
    <string name="crane_start_date">Start datum</string>
    <string name="reserve_crane_here">Reserveer hier uw kraan</string>
    <string name="reserved_cranes">Gereserveerde kranen</string>
    <string name="crane_start_end_time">Van - Tot</string>
    <string name="crane_end_time">Eind tijd</string>
    <string name="crane_save">Opslaan</string>
    <string name="crane_cancel">Annuleren</string>
    <string name="crane_number">Kraan nummmer</string>
    <string name="date">Datum</string>
    <string name="time">Tijd</string>

    //Splashscreen
    <string name="splash_quote_one">De zee vullen met water</string>
    <string name="splash_quote_two">Ankers laten zakken</string>
    <string name="splash_quote_three">Schepen aanmeren</string>
    <string name="splash_quote_four">Zeilen hijsen</string>
    <string name="splash_quote_five">Havenmeester wakker maken</string>
    <string name="splash_quote_six">Dek schrobben</string>
    <string name="splash_quote_seven">Landrotten werven</string>
    <string name="splash_quote_eight">Rubberboot opblazen</string>
    <string name="splash_quote_nine">Wind in de zeilen blazen</string>
    <string name="splash_quote_ten">Maarten Bootje</string>

</resources>
