<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_post"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_myBoats"
            android:title="@string/action_myBoats" />
        <item
            android:id="@+id/nav_addBoats"
            android:title="@string/action_addBoats" />
        <item
            android:id="@+id/nav_myBoxes"
            android:title="@string/action_myBoxes" />
        <item
            android:id="@+id/nav_rentBox"
            android:title="@string/action_rentBoxes" />
        <item
            android:id="@+id/nav_reserveCrane"
            android:title="@string/action_reserveCrane" />
    </group>

    <item android:title="@string/category_login">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/action_login" />
                <item
                    android:id="@+id/nav_register"
                    android:title="@string/action_register" />
            </group>
        </menu>
    </item>

    <item android:title="@string/category_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_myInfo"
                    android:title="@string/action_myInfo" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/action_logout" />
            </group>
        </menu>
    </item>

    <item android:title="Debug menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/splashscreen"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="Splashscreen" />
            </group>
        </menu>
    </item>
</menu>
