<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_register"
        android:background="@color/colorWhite"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/registration_first_name"
                android:ems="10"
                android:id="@+id/editTextFirstName"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/registration_last_name"
                android:ems="10"
                android:id="@+id/editTextLastName"
                android:layout_below="@+id/editTextFirstName"
                android:layout_alignLeft="@+id/editTextFirstName"
                android:layout_alignStart="@+id/editTextFirstName"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/registration_email"
                android:ems="10"
                android:id="@+id/editTextEmail"
                android:layout_below="@+id/editTextLastName"
                android:layout_alignLeft="@+id/editTextLastName"
                android:layout_alignStart="@+id/editTextLastName"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/registration_adress"
                android:ems="10"
                android:id="@+id/editTextAdress"
                android:layout_below="@+id/editTextEmail"
                android:layout_alignLeft="@+id/editTextEmail"
                android:layout_alignStart="@+id/editTextEmail"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/registration_house_number"
                android:ems="10"
                android:id="@+id/editTextHouseNumber"
                android:layout_below="@+id/editTextAdress"
                android:layout_alignLeft="@+id/editTextAdress"
                android:layout_alignStart="@+id/editTextAdress"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/registration_house_number_addition"
                android:ems="10"
                android:id="@+id/editTextHouseNumberAddition"
                android:layout_above="@+id/editTextPhone"
                android:layout_toRightOf="@+id/editTextPhone"
                android:layout_toEndOf="@+id/editTextPhone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/registration_phone"
                android:ems="10"
                android:id="@+id/editTextPhone"
                android:layout_below="@+id/editTextHouseNumber"
                android:layout_alignLeft="@+id/editTextAdress"
                android:layout_alignStart="@+id/editTextAdress"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_view_button"
                android:id="@+id/buttonSend"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/editTextPhone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>