<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_boat_add"
            android:background="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/boat_add_title"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/textViewTitle"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/boat_add_boat_name"
                    android:ems="10"
                    android:id="@+id/editTextBoatName"
                    android:layout_below="@+id/textViewTitle"
                    android:layout_alignLeft="@+id/textViewTitle"
                    android:layout_alignStart="@+id/textViewTitle"
                    android:layout_marginTop="20dp"
                    android:layout_alignRight="@+id/textViewTitle"
                    android:layout_alignEnd="@+id/textViewTitle" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/boat_add_boat_brand"
                    android:ems="10"
                    android:id="@+id/editTextBoatBrand"
                    android:layout_below="@+id/editTextBoatName"
                    android:layout_alignLeft="@+id/editTextBoatName"
                    android:layout_alignStart="@+id/editTextBoatName"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/boat_add_boat_type"
                    android:ems="10"
                    android:id="@+id/editTextBoatType"
                    android:layout_below="@+id/editTextBoatBrand"
                    android:layout_alignLeft="@+id/editTextBoatBrand"
                    android:layout_alignStart="@+id/editTextBoatBrand"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/boat_add_boat_color"
                    android:id="@+id/textViewBoatColor"
                    android:layout_below="@+id/editTextBoatType"
                    android:textColor="@color/colorBlack"
                    android:layout_alignLeft="@+id/editTextBoatBrand"
                    android:layout_alignStart="@+id/editTextBoatBrand"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <Spinner
                    android:id="@+id/spinnerBoatColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewBoatColor"
                    android:layout_alignLeft="@+id/editTextBoatType"
                    android:layout_alignStart="@+id/editTextBoatType" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/boat_add_dimensions"
                    android:id="@+id/textViewDimensions"
                    android:textColor="@color/colorBlack"
                    android:layout_below="@+id/spinnerBoatColor"
                    android:layout_alignLeft="@+id/editTextBoatType"
                    android:layout_alignStart="@+id/editTextBoatType"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/boat_add_dimensions_length"
                    android:ems="10"
                    android:id="@+id/editTextDimensionsLength"
                    android:layout_below="@+id/textViewDimensions"
                    android:layout_alignLeft="@+id/editTextBoatType"
                    android:layout_alignStart="@+id/editTextBoatType"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/boat_add_dimensions_width"
                    android:ems="10"
                    android:id="@+id/editTextDimensionsWidth"
                    android:layout_below="@+id/editTextDimensionsLength"
                    android:layout_alignLeft="@+id/editTextBoatType"
                    android:layout_alignStart="@+id/editTextBoatType"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/boat_add_dimensions_heigth"
                    android:ems="10"
                    android:id="@+id/editTextDimensionsHeigth"
                    android:layout_below="@+id/editTextDimensionsWidth"
                    android:layout_alignLeft="@+id/editTextBoatType"
                    android:layout_alignStart="@+id/editTextBoatType"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextDimensionsHeigth"
                    android:layout_alignLeft="@+id/spinnerBoatColor"
                    android:layout_alignStart="@+id/spinnerBoatColor"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:id="@+id/radioGroupBoatSpecies">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boat_add_radiobutton_motorboat"
                        android:id="@+id/radioButtonMotorBoat"
                        android:checked="false"
                        android:buttonTint="@color/colorBlack"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boat_add_radiobutton_sailboat"
                        android:id="@+id/radioButtonSailBoat"
                        android:checked="false"
                        android:buttonTint="@color/colorBlack"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boat_add_radiobutton_otherboat"
                        android:id="@+id/radioButtonOtherBoat"
                        android:checked="false"
                        android:buttonTint="@color/colorBlack"/>

                </RadioGroup>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/boat_add_boat_people"
                    android:ems="10"
                    android:id="@+id/editTextBoatPeople"
                    android:layout_below="@+id/radioGroupBoatSpecies"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@+id/spinnerBoatColor"
                    android:layout_alignStart="@+id/spinnerBoatColor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/boat_add_button_register"
                    android:id="@+id/buttonRegisterBoat"
                    android:textAllCaps="false"
                    android:layout_below="@+id/editTextBoatPeople"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>